--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,5 @@ jobs:
           plugin_notable: yes
           plugin_notable_repositories: yes
           plugin_habits_charts: yes
+          plugin_notable_indepth: yes
+          plugin_notable_from: 'all'
