--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           # Your GitHub token
+          filename: metrics-left.svg
           token: ${{ secrets.METRICS_TOKEN }}
           plugin_isocalendar: yes
           plugin_languages: yes
@@ -32,3 +33,12 @@ jobs:
           plugin_activity_visibility: public # Only display public events
           plugin_activity_timestamps: yes    # Display events timestamps
           plugin_activity_skipped: repo      # Ignored repositories
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics-right.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          plugin_tweets: yes
+          plugin_tweets_token: ${{ secrets.TWITTER_TOKEN }} # Required
+          plugin_tweets_attachments: no                    # Display tweets attachments (images, preview urls, etc.)
+          plugin_tweets_limit: 6                     # Limit to 2 tweets
+          plugin_tweets_user: Lucas7yoshi
