--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -47,3 +47,5 @@ jobs:
           plugin_activity_visibility: public # Only display public events
           plugin_activity_timestamps: yes    # Display events timestamps
           plugin_activity_skipped: repo      # Ignored repositories
+          plugin_calendar: yes
+          plugin_calendar_limit: 4
