--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -19,7 +19,7 @@ jobs:
           plugin_isocalendar: yes
           plugin_languages: yes
           plugin_notable: yes
-          plugin_notable_repositories: yes
+          plugin_notable_repositories: no
           plugin_habits_charts: yes
           plugin_notable_indepth: yes
           plugin_notable_from: 'all'
