--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -18,7 +18,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           plugin_isocalendar: yes
           plugin_languages: yes
-          plugin_notable: yes
+          plugin_notable: no
           plugin_notable_repositories: no
           plugin_habits_charts: yes
           plugin_notable_indepth: yes
